fix: correct about me, experience-wrap

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body {
 .img {
     max-width: 370px;
     width: 100%;
-    height: 550px;
+    max-height: 530px;
 }
 
 .container-left {
@@ -231,7 +231,7 @@ body {
 .experience-wrap {
     display: flex;
     flex-direction: row;
-    width: 550px;
+    max-width: 550px;
     justify-content: space-between;
     gap: 5px;
 }
